--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "mocha --timeout 10000",
     "lint": "./node_modules/.bin/eslint .",
     "fix": "./node_modules/.bin/eslint --fix .",
-    "dev": "./node_modules/.bin/nodemon index.js"
+    "server": "./node_modules/.bin/nodemon index.js",
+    "client": "cd client && ng serve --open",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,11 @@
     "url": "https://github.com/AnshD12/ion-test/issues"
   },
   "homepage": "https://github.com/AnshD12/ion-test#readme",
+  "nodemonConfig": {
+    "ignore": [
+      "app/uploads/*.json"
+    ]
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
@@ -33,8 +40,10 @@
   "dependencies": {
     "app-root-path": "^2.2.1",
     "body-parser": "^1.19.0",
+    "concurrently": "^4.1.1",
     "express": "^4.17.1",
     "mongoose": "^5.5.3",
+    "multer": "^1.4.2",
     "winston": "^3.2.1"
   }
 }
